--- a/projects/example-app/tsconfig.app.json
+++ b/projects/example-app/tsconfig.app.json
@@ -19,8 +19,7 @@
       "@ngrx/store-devtools": ["../../modules/store-devtools"],
       "@ngrx/router-store": ["../../modules/router-store"],
       "@ngrx/entity": ["../../modules/entity"],
-      "@ngrx/schematics": ["../../modules/schematics"],
-      "@example-app/*": ["./src/app/*"]
+      "@ngrx/schematics": ["../../modules/schematics"]
     }
   },
   "exclude": [
